# services

./: .gitignore  pyproject.toml
.github/workflows/: deploy.yaml
docs/: index.html
src/services/: __init__.py
src/services/backend/: models.py  run.py
src/services/backend/app/: main.py
src/services/backend/app/auth/: login.py
src/services/backend/app/core/: config.py
src/services/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/services/frontend/public/: 404.html
src/services/frontend/src/: App.jsx  config.jsx
src/services/frontend/src/components/: Export.jsx  Footer.jsx  Login.jsx  Navbar.jsx  NotLoggedInMessage.jsx  Signup.jsx  Terms.jsx  skeleton.jsx
src/services/frontend/src/data/: Services.jsx  Team.jsx
src/services/frontend/src/pages/: Contact.jsx  Home.jsx  Main.jsx  Metamizer.jsx  Rng.jsx  Team.jsx
src/services/frontend/src/service_pages/: Home.jsx  Metamizer.jsx  Rng.jsx
