[project]
name = "services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Prasanna Paithankar", email = "paithankarprasanna@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
services = "services:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
