[project]
name = "services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Prasanna Paithankar", email = "paithankarprasanna@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]

[project.scripts]
services = "services.backend.run:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
